fix(sidebar): inline z-index (#10)

--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -20,8 +20,6 @@ $sidebar-zindex: 100 !default;
   width: 100%;
   display: none;
 
-  @include avariable("z-index", "sidebar-zindex", $sidebar-zindex);
-
   &__content {
     position: absolute;
 
@@ -209,5 +207,9 @@ $sidebar-zindex: 100 !default;
     .o-side__content {
       position: relative;
     }
+  }
+
+  &:not(&--inline) {
+    @include avariable("z-index", "sidebar-zindex", $sidebar-zindex);
   }
 }
